# pattern-design-proxy

./: README.md  docker-compose.yaml
pattern-design-proxy/: main.py  pyproject.toml
pattern-design-proxy/controller/: __init__.py  controller_hello_world.py
pattern-design-proxy/proxy/: __init__.py  proxy_hello_world.py
pattern-design-proxy/router/: __init__.py  router_hello_world.py
pattern-design-proxy/services/: __init__.py  iservices_hello_world.py  services_hello_world.py
pattern-design-proxy/utils/: __init__.py  cache.py
